Suppression include post login

--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,7 @@ h2{
 .espaceUcape{
     margin: 1%;
 }
-.espaceUcape p{
-    text-justify:   
+footer{
+    color: white;
+    text-align: center;
 }
